// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlaybookPage /> renders correctly when empty 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "marginTop": "30%",
        "padding": 30,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "marginBottom": 50,
          "textAlign": "center",
        }
      }
    >
      Your playbook is empty!
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#e5e5e5",
        "borderTopWidth": 1,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 10,
      }
    }
    testID="createPlay"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#2a9e91",
          "borderRadius": 25,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "width": 50,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`<PlaybookPage /> renders correctly with plays 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "height": 60,
              "paddingLeft": 20,
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "flexBasis": "100%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            title
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "padding": 10,
            }
          }
          testID="edit"
        >
          <Text />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "opacity": 1,
              "padding": 10,
            }
          }
          testID="delete"
        >
          <Text />
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#e5e5e5",
        "borderTopWidth": 1,
        "opacity": 1,
        "paddingBottom": 20,
        "paddingTop": 10,
      }
    }
    testID="createPlay"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#2a9e91",
          "borderRadius": 25,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "width": 50,
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;
